--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.6.0",
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
+    "razorpay": "^2.9.4",
+    "stripe": "^17.1.0",
     "twilio": "^5.2.2"
   }
 }
